gccida/c0/canon_reg
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/canon_reg/src/cse.c:3283:2: error: expected expression
 struct cse_reg_info = cached_cse_reg_info; 
 ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/canon_reg/src/cse.c:3285:2: error: expected expression
 struct cse_reg_info = get_cse_reg_info( x->fld[0].rtuint); 
 ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/canon_reg/src/cse.c:3312:14: error: use of undeclared identifier 'insn_data_0'; did you mean 'insn_data'?
rtint < 0 || insn_data_0[rtint].n_dups > 0)) ) 
             ^~~~~~~~~~~
             insn_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/canon_reg/src/recog.h:249:31: note: 'insn_data' declared here
extern const struct insn_data insn_data[];
                              ^
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/canon_reg/src/obj/cse.o] Error 1
